# cargo-workspace-unused-pub

./: Cargo.toml  Makefile.toml  README.md  about.hbs  about.toml  nfpm.yaml
src/: main.rs
