[package]
name = "cargo-workspace-unused-pub"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cpg314/cargo-workspace-unused-pub"
category = ["development-tools::cargo-plugins"]
description = "Detect unused pub methods in a Rust workspace"

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
colored = "2.1.0"
duct = "0.13.7"
env_logger = "0.11.3"
itertools = "0.12.1"
log = "0.4.21"
protobuf = "=3.2.0"
scip = "0.3.3"
walkdir = "2.5.0"
